src/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s1-0a6c29ef-default-todo-app-service-8080-227996e5":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s2-fr-lekhqr7t-default-todo-app-b0tr8qpz
    ingress.kubernetes.io/target-proxy: k8s2-tp-lekhqr7t-default-todo-app-b0tr8qpz
    ingress.kubernetes.io/url-map: k8s2-um-lekhqr7t-default-todo-app-b0tr8qpz
  finalizers:
    - networking.gke.io/ingress-finalizer-V2
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:defaultBackend:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:port:
                .: {}
                f:number: {}
      manager: GoogleCloudConsole
      operation: Update
      time: "2022-09-25T16:23:27Z"
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:ingress.kubernetes.io/backends: {}
            f:ingress.kubernetes.io/forwarding-rule: {}
            f:ingress.kubernetes.io/target-proxy: {}
            f:ingress.kubernetes.io/url-map: {}
          f:finalizers:
            .: {}
            v:"networking.gke.io/ingress-finalizer-V2": {}
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: glbc
      operation: Update
      subresource: status
  name: todo-app
  namespace: default
spec:
  defaultBackend:
    service:
      name: todo-app-service
      port:
        name: web-svc
